<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/fragment_set_up_income_padding_horizontal">

    <TextView
        android:id="@+id/income_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_set_up_income_description_margin_top"
        android:text="@string/fragment_set_up_income_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/income_budget_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_set_up_income_budget_toggle_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/income_description"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/income_button"
            style="@style/Theme.Budgetify.Button.Toggle.Option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_set_up_income_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/budget_button"
            style="@style/Theme.Budgetify.Button.Toggle.Option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_budget_button_background"
            android:text="@string/fragment_set_up_income_budget_button"
            android:textColor="@color/color_budget_button_text"
            app:rippleColor="@color/orange_500_alpha_12"
            app:strokeColor="@color/color_budget_button_stroke" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <dev.ohjiho.budgetify.presentation.widget.moneyinput.MoneyDisplay
        android:id="@+id/money_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_set_up_income_money_display_margin_top"
        app:layout_constraintTop_toBottomOf="@id/income_budget_toggle" />

    <dev.ohjiho.budgetify.presentation.widget.RepeatDisplay
        android:id="@+id/repeat_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_set_up_income_reoccurrence_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money_display" />

    <dev.ohjiho.budgetify.presentation.widget.DropdownMenu
        android:id="@+id/account_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_set_up_income_account_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_display"
        app:title="@string/fragment_set_up_income_account_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="@style/Theme.Budgetify.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/set_up_back_button_margin_end"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/next_button"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/next_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Theme.Budgetify.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/set_up_nav_buttons_margin_bottom"
        android:text="@string/fragment_set_up_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>