<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/background_start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@dimen/fragment_welcome_app_icon_size"
        android:layout_height="@dimen/fragment_welcome_app_icon_size"
        android:importantForAccessibility="no"
        android:src="@drawable/app_icon"
        app:layout_constraintBottom_toBottomOf="@id/background_start_guideline"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/background_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintGuide_percent="0.32" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/background_wave"
        app:layout_constraintBottom_toBottomOf="@id/background_end_guideline"
        app:layout_constraintTop_toTopOf="@id/background_start_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/background_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintGuide_percent="0.4" />

    <!-- Content starts here -->
    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/fragment_welcome_layout_padding_horizontal"
        app:layout_constraintBottom_toTopOf="@id/nav_button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_end_guideline">

        <TextView
            style="?textAppearanceHeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_welcome_greeting_margin_bottom"
            android:text="@string/fragment_welcome_greeting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_welcome_description"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/currency_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_set_up_currency_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_set_up_currency_margin_vertical"
        android:layout_marginEnd="@dimen/fragment_set_up_currency_margin_horizontal"
        android:text="@string/fragment_set_up_currency_default_description"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/background_end_guideline" />

    <dev.ohjiho.currencypicker.CurrencyPicker
        android:id="@+id/currency_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/fragment_set_up_currency_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_set_up_currency_currency_picker_margin_top"
        android:layout_marginEnd="@dimen/fragment_set_up_currency_margin_horizontal"
        android:layout_marginBottom="@dimen/fragment_set_up_currency_margin_vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/nav_button_container"
        app:layout_constraintTop_toBottomOf="@id/currency_description" />
    <!-- Content ends here -->

    <LinearLayout
        android:id="@+id/nav_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/set_up_default_padding_horizontal"
        android:layout_marginBottom="@dimen/set_up_nav_buttons_margin_bottom"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/back_button"
            style="@style/Theme.Budgetify.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/set_up_back_button_margin_end"
            app:icon="@drawable/ic_arrow_back" />

        <Button
            android:id="@+id/next_button"
            style="@style/Theme.Budgetify.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_set_up_next_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>